--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,4 @@
-body, html{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    margin: 0;
-    height: 100vh;
-    font-family: Calibri;
-    background-color: #679c76;
+body {
+  background: rgb(2,0,36);
+  background: linear-gradient(135deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%) fixed;
 }
